tried to fix spacing issue but now mobile layout wont work. I think I made progress on the scroll bar issue

--- a/css/index.css
+++ b/css/index.css
@@ -64,13 +64,15 @@ h1, h2, h3, h4, h5 {
 
 .container {
 	margin: 0 auto;
-	width: 876px;
+    width: 876px;
+  
 }
 
 .first-row {
 	display: flex;
     justify-content: flex-start;
     margin-top: 20px;
+    padding-bottom: 5%;
 	
 }
 
@@ -95,7 +97,7 @@ h5 {
 }
 
 .third-row p {
-	width: 65%;
+	width: 75%;
 	margin: 5%;
 }
 
@@ -104,48 +106,54 @@ h5 {
 }
 
 .second-row {
+    display: flex;
 	align-items: center;
-	flex-wrap: nowrap
+	width: 25%;
 	}
 
 .innovation-header {
-	display: flex;
+	/*display: flex;
 	font-size: 65px;
 	justify-content: center;
-	margin-right: 650px;
+    margin-right: 650px;*/
+    font-size: 65px;
+     /*could not determine how to move this and logo w flex*/
+    text-align: center;
 
 }
 
 .logo-header {
-	
-	flex-wrap: wrap;
+	/*flex-wrap: wrap;
 	position: relative;
 	left: 115px;
-	top: 140px;
+    top: 140px;*/
+    margin-left: 30%;
 }
 
 .circle-logo {
-	position: relative;
+	/*position: relative;
 	left: 500px;
-	bottom: 180px;
+    bottom: 180px;*/
+    margin-left: 10%;
 }
 
 .started {
-	position: relative;
-	left: 40px;
 	padding: 2px 35px 2px 35px;
-	border: 1px solid black;
+    border: 1px solid black;
+    margin-left: 20%;
+
 }
 
 .third-row {
 	flex-wrap: nowrap;
-	border-top: 1px solid black;
+    border-top: 2px solid black;
+    margin-top: 10%;
 }
 
 .bottom-three section {
 	flex-direction: row;
-	border-bottom: 1px solid black;
-	width: 385px;
+	border-bottom: 2px solid black;
+	width: 50%;
 	padding-bottom: 22px;
 }
 
@@ -154,12 +162,9 @@ footer h5 {
 }
 
 .bottom-three p {
-	width: 270px;
+    width: 90%;
 }
 
-.copy {
-	margin: 2px 300px 2px;
-}
 
 .nav-logo {
 	display: flex;
@@ -287,6 +292,7 @@ ul {
     }
     .second-row {
         margin-top: -10%;
+        margin-left: 25%;
     }
     .logo {
         width: 20%;
@@ -297,19 +303,26 @@ ul {
     
     }
     .innovation-header {
-        margin-left: 20%;
-        margin-right: 0px;
+       margin: 30% 0% 5% 5%;
+       align-content: center;
     }
     .third-row {
         border-top: 2px solid black;
-        width: 110%;
+        width: 90%;
     }
     .middle-img {
         margin: 1% 2% 1% 2%;
     }
-    .bottom-three {
-        margin: 1% 2% 1% 2%;
-        width: 80%;
+    /*.bottom-three {
+        margin: 1% 2% 0% 2%;*/
+       
+    }
+    .middle-img {
+        width: 90%;
+    }
+
+    .bottom-three p {
+        width: 90%;
     }
 
     
@@ -318,7 +331,7 @@ ul {
 /* tablet - for 500 and below do this */
 @media (max-width: 500px) {
     .container {
-        max-width: 500px;
+        width: 500px;
         margin: 0 auto;
         background: blue;
     }
